peer-code-review feedback: fix contact section width on small screens

--- a/assets/css/small-screens.css
+++ b/assets/css/small-screens.css
@@ -114,6 +114,12 @@
         padding: 20px 0;
     }
 
+    #contact {
+      padding: 0;
+      display: flex;
+      justify-content: center;
+    }
+
     #success-message {
         padding-right: 0;
         padding: 4rem;
